action items are alsomst done

--- a/index.html
+++ b/index.html
@@ -2,9 +2,64 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
   <title>Document</title>
-  <link rel="stylesheet" href="chapter_7.css">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 
 </body>
 </html>
+<h1>001</h1>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse, modi.</p>
+<h2>002</h2>
+<p>Praesentium earum eaque cumque laudantium at reprehenderit commodi officia qui.</p>
+<h3>003</h3>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum, et.</p>
+<h4>004</h4>
+<p>Tenetur, amet, laboriosam. Facere accusamus cupiditate, rem, deleniti repellat asperiores!</p>
+<br><br><br>
+<ul>
+<li>
+  <div class="">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, magnam!</div>
+</li>
+<li>
+  <div class="">Dolor eaque, enim in magnam voluptatem explicabo aut modi itaque?</div>
+</li>
+<li>
+  <div class="">Rem neque error sunt earum totam itaque. Repellat, consequuntur nobis?</div>
+</li>
+<li>
+  <div class="">Aliquid quisquam eligendi eius quidem unde. Impedit vero dolorum dolores.</div>
+</li>
+<li>
+  <div class="">Repellendus pariatur nesciunt cumque aspernatur, laboriosam itaque neque minima officia.</div>
+</li>
+</ul>
+
+<br><br><br>
+
+<ol>
+<li>
+  <div class="">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione, autem.</div>
+</li>
+<li>
+  <div class="">Necessitatibus nihil nostrum veniam veritatis tenetur ad ipsa laboriosam facere.</div>
+</li>
+<li>
+  <div class="">Dolore nesciunt quaerat reprehenderit, neque cum dolor voluptatum autem ab.</div>
+</li>
+<li>
+  <div class="">Dolores placeat aperiam voluptate autem vero fugit ea officia quidem.</div>
+</li>
+<li>
+  <div class="">Unde a, nulla architecto vitae aliquid. Consequuntur, amet voluptates ipsa.</div>
+</li>
+</ol>
+
+<br><br><br>
+
+<img src="https://static.remove.bg/remove-bg-web/f50bd6ad4990ff621deccea155ab762c39d8c77a/assets/start_remove-c851bdf8d3127a24e2d137a55b1b427378cd17385b01aec6e59d5d4b5f39d2ec.png" alt="woman">
+<a href="https://www.google.com">Go to Google site</a>
+
+<!-- this is cool! I created this document in 30 minutes or less -->
+<!-- I like it! -->
+<!-- I'll learn development skills for product management -->
